Update to java 8
* Chucking the Guava iterables, and predicates now using native
  Java 8 streams and functional interfaces.